[MAPD-1030] Fix active dashboard title shifting on mobile

--- a/frontend/map/styles/views/project-mobile.styl
+++ b/frontend/map/styles/views/project-mobile.styl
@@ -45,6 +45,7 @@
       background-color: white;
       margin-bottom: 0;
       text-align: center;
+      vertical-align: top;
       font-size: 15px;
 
       &.widget-active
@@ -52,6 +53,9 @@
         height: $project-mobile-widget-height-active;
         border-bottom: solid $light_blue 3px;
         border-right: none;
+
+        .widget-title
+          bottom: 0;
 
     .widget-pin
       .widget-background
@@ -76,3 +80,4 @@
     .widget-title
       text-transform: none;
       font-size: 10px;
+      bottom: 1px;
